--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "nopt",
-  "version": "5.0.0",
+  "name": "@pnpm/nopt",
+  "version": "0.1.0",
   "description": "Option parsing for Node, supporting types, shorthands, etc. Used by npm.",
   "author": "Isaac Z. Schlueter <i@izs.me> (http://blog.izs.me/)",
   "main": "lib/nopt.js",
