--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Option parsing for Node, supporting types, shorthands, etc. Used by npm.",
   "author": "Isaac Z. Schlueter <i@izs.me> (http://blog.izs.me/)",
   "main": "lib/nopt.js",
+  "typings": "lib/nopt.d.js",
   "scripts": {
     "preversion": "npm test",
     "postversion": "npm publish",
