chore: `--no-coverage` was removed from tap

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -58,7 +58,7 @@ jobs:
       #   Simply run the tests for the project.
       ################################################################################
       - name: Run tests
-        run: npm test -- --no-coverage
+        run: npm test
 
       ################################################################################
       # Run coverage check
