--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,17 +23,17 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        node-version: [10.x, 12.x, 13.x]
+        node-version: [18.12, 20.x, 22.x]
         os: [ubuntu-latest, windows-latest, macOS-latest]
 
     runs-on: ${{ matrix.os }}
 
     steps:
       # Checkout the repository
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
         # Installs the specific version of Node.js
       - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v1
+        uses: actions/setup-node@v4
         with:
           node-version: ${{ matrix.node-version }}
 
@@ -58,7 +58,7 @@ jobs:
       #   Simply run the tests for the project.
       ################################################################################
       - name: Run tests
-        run: npm test -- --no-coverage
+        run: npm test
 
       ################################################################################
       # Run coverage check
@@ -73,7 +73,7 @@ jobs:
       #   pull-request event, and push event (line 3).
       ################################################################################
       - name: Run coverage report
-        if: github.event_name == 'push' && matrix.node-version == '12.x' && matrix.os == 'ubuntu-latest'
+        if: github.event_name == 'push' && matrix.node-version == '22.x' && matrix.os == 'ubuntu-latest'
         run: npm test
         env:
           # The environment variable name is leveraged by `tap`
