--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "preversion": "npm test",
     "postversion": "npm publish",
     "prepublishOnly": "git push origin --follow-tags",
-    "test": "tap test/*.js"
+    "test": "tap --allow-incomplete-coverage test/*.js"
   },
   "repository": {
     "type": "git",
